--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 :root {
-  --dark-color: rgb(36, 36, 46);
+  --dark-color: rgb(46, 46, 68);
   --medium-color: rgb(64, 78, 121);
   --main-color: rgb(230, 232, 230);
-  --accent-color: rgb(248, 117, 117);
+  --accent-color: rgb(218, 69, 69);
   --text-on-dark: rgb(255, 255, 255);
   --shadow-color: rgba(89, 89, 95, 0.459);
   --padding-regular: 20px;
   --border-radius-regular: 15px;
+  --gap-regular: 25px;
   --gap-small: 10px;
 }
 body {
   margin: 0 auto;
   box-sizing: border-box;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 .container {
   width: 100%;
@@ -50,7 +52,7 @@ body {
   grid-row: 1 / 2;
   background-color: var(--text-on-dark);
   display: grid;
-  grid-template-rows: 100px 130px;
+  grid-template-rows: 70px 100px;
 }
 .upper-panel {
   grid-row: 1/2;
@@ -60,26 +62,26 @@ body {
   padding: var(--padding-regular);
   border-bottom: var(--shadow-color) 2px solid;
 }
-.left-panel > i,
-.right-panel > i {
+.left-panel-upper > i,
+.right-panel-upper > i {
   color: var(--dark-color);
 }
-.lower-panel {
-  grid-row: 2/3;
-}
-
-.left-panel,
-.right-panel {
+.left-panel-upper,
+.right-panel-upper {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 25px;
 }
-.right-panel > img {
+.right-panel-upper > img {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
+.lower-panel {
+  grid-row: 2/3;
+}
+
 .search-bar {
   margin-left: 1em;
   height: 30px;
@@ -88,7 +90,39 @@ body {
   padding: 10px;
   border-radius: var(--border-radius-regular);
 }
-
+.lower-panel {
+  display: flex;
+  justify-content: space-between;
+  padding: var(--padding-regular);
+  align-items: center;
+}
+.left-panel-lower {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-regular);
+}
+.left-panel-lower > img {
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+}
+.right-panel-lower {
+  display: flex;
+  gap: var(--gap-regular);
+  align-items: center;
+}
+.right-panel-btn {
+  height: 40px;
+  width: 100px;
+  color: var(--text-on-dark);
+  background-color: var(--accent-color);
+  font-size: 1em;
+  border: none;
+  border-radius: var(--border-radius-regular);
+}
+.text > h1 {
+  line-height: 0px;
+}
 i {
   color: var(--text-on-dark);
   font-size: 2em;
