--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  grid-template-columns: 0.8fr 3fr;
+  grid-template-columns: 0.6fr 3fr;
   grid-template-rows: 1fr 4fr;
 }
 
@@ -38,13 +38,46 @@ body {
   flex-direction: column;
   justify-content: start;
   padding: var(--padding-regular);
-  align-items: start;
+  align-items: center;
+}
+.logo-mark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--gap-regular);
+  color: var(--text-on-dark);
+}
+.logo-mark > i {
+  font-size: 2em;
 }
 .btn {
   display: flex;
   justify-content: start;
   align-items: center;
   gap: var(--gap-small);
+  width: 100%;
+  padding-left: 1em;
+}
+.btn > h3:hover {
+  text-decoration: underline var(--text-on-dark) 2px;
+}
+.btn > h3 {
+  cursor: pointer;
+  color: var(--text-on-dark);
+}
+.panel-1 {
+  margin-top: 2em;
+}
+.panel-2 {
+  margin-top: 3em;
+}
+.panel-1,
+.panel-2 {
+  width: 100%;
+}
+.option {
+  margin-left: 0;
+  width: 100%;
 }
 /*HEADER*/
 .header {
@@ -125,5 +158,5 @@ body {
 }
 i {
   color: var(--text-on-dark);
-  font-size: 2em;
+  font-size: 1.4em;
 }
