--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   display: grid;
   grid-template-columns: 0.6fr 3fr;
   grid-template-rows: 1fr 4fr;
+  background-color: var(--main-color);
 }
 
 /*SIDE BAR*/
@@ -35,6 +36,7 @@ body {
   justify-content: start;
   padding: var(--padding-regular);
   align-items: center;
+  z-index: 100;
 }
 .logo-mark {
   display: flex;
@@ -83,7 +85,7 @@ body {
   background-color: var(--text-on-dark);
   display: grid;
   grid-template-rows: 70px 100px;
-  box-shadow: 0 4px 2px 2px black;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.486);
 }
 .upper-panel {
   grid-row: 1/2;
@@ -173,8 +175,8 @@ i {
   grid-row: 2 / 3;
   background-color: var(--main-color);
   display: grid;
-  grid-template-columns: 1fr 400px;
-  grid-template-rows: 1fr 250px;
+  grid-template-columns: 1fr 500px;
+  grid-template-rows: 270px 400px;
   padding: var(--padding-regular);
   gap: var(--gap-regular);
 }
@@ -185,10 +187,67 @@ i {
 .content-card {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  padding: var(--padding-regular);
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  margin: 0;
+  gap: var(--gap-regular);
+  align-items: center;
+  justify-content: center;
+}
+.Projects-heading {
+  position: absolute;
+  top: 8em;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 260px;
+  width: 290px;
+  padding: var(--padding-regular);
+  border: 2px var(--shadow-color) solid;
+  border-left: 8px var(--accent-color) solid;
+  border-radius: var(--border-radius-regular);
+}
+.top {
+  margin-top: 2em;
+}
+.card > h3 {
+  line-height: 10px;
+}
+.card > p {
+  line-height: 20px;
+}
+.card-btn {
+  align-self: flex-end;
+}
+.card-btn > i {
+  color: var(--dark-color);
+}
+/*ANNOUNCEMENT*/
+
+.announcement > div > p {
+  line-height: 25px;
+  font-size: 12px;
+}
+.announcement > div > h4 {
+  line-height: 10px;
 }
 .announcement {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column;
+  padding: var(--padding-regular);
+  align-items: self-start;
+  justify-content: flex-start; /* Aligns content from the top */
+  overflow: hidden; /* Prevents content from resizing grid */
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
+  overflow-y: auto; /* Enables scrolling if content overflows */
 }
 .trending {
   grid-column: 2 / 3;
